@@ -105,3 +105,4 @@ autom4te-2.53.cache
 A.powerpc-ibm-aix5.1.0.0
 A.ia64-unknown-linux-rh2.1AS
 A.ia64-unknown-linux-rh7.2
+A.i386-unknown-freebsd4.7
